# chat_over_docs

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  prompts.py  pyproject.toml  requirements.txt  text.txt  utils.py
notebooks/: chat_over_docs.ipynb
