[tool.poetry]
name = "chat-over-docs"
version = "0.1.0"
description = "This is a app that allows you to ask questions about your document"
authors = ["KimaniKibuthu <32309808+KimaniKibuthu@users.noreply.github.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.12"
langchain-community = "^0.0.28"
chromadb = "^0.4.24"
jupyter = "^1.0.0"
ipykernel = "^6.29.3"
asyncio = "^3.4.3"
nest-asyncio = "^1.6.0"
langchain-nomic = "^0.0.2"
gpt4all = "^2.2.1.post1"
langchain-experimental = "^0.0.54"
langserve = {extras = ["all"], version = "^0.0.51"}
pydantic = "1.10.13"
streamlit = "^1.32.1"
pre-commit = "^3.6.2"
langchain-google-genai = "^0.0.11"
langchainhub = "^0.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
